<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.comss.practicaii.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/app_title"
        android:gravity="center"
        android:textColor="@color/black"/>

    <!-- Campo Usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/form_user"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eUser"/>
    </LinearLayout>

    <!-- Campo Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/form_pass"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:id="@+id/ePass"/>
    </LinearLayout>

    <!-- Campo Pass2 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/form_pass2"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:id="@+id/ePass2"/>
    </LinearLayout>

    <!-- Campo Correo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/form_email"
            android:textColor="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:id="@+id/eMail"/>
    </LinearLayout>

    <!-- RadioButtons -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_male"
            android:onClick="onRadioButtonClicked"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/rFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_female"
            android:onClick="onRadioButtonClicked"
            android:textSize="20sp"/>
    </RadioGroup>

    <!-- Nacimiento DatePicker -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_nacimiento"
        android:onClick="showDatePickerDialog" />

    <!-- Nacimiento Lugar -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/form_lugar"
            android:textColor="@color/black"/>
    </LinearLayout>
    <Spinner
        android:id="@+id/sLugar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <!-- Check boxes -->
    <CheckBox android:id="@+id/chH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_hobby1"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_hobby2"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_hobby3"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_hobby4"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_acept"
        android:onClick="onButtonClicked"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tResp"
        android:textColor="@color/black"/>
</LinearLayout>